fix: check visibled title table

--- a/src/assets/scss/_tables.scss
+++ b/src/assets/scss/_tables.scss
@@ -39,9 +39,7 @@ table {
 
   tr {
     th {
-      @apply bg-gray3 align-middle text-left font-rubik text-small p-4;
-
-      filter: drop-shadow(0px 1px 0px #ffb600);
+      @apply bg-gray3 align-middle text-left font-rubik text-small p-4 border-b border-solid border-orangePrimary;
 
       strong {
         @apply inline-flex items-center font-medium;
